# oxi-llama

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile.sync  README.md
.github/workflows/: release.yaml  test.yaml
api/examples/: README.md
docs/: development.md  distribution.md  linux.md  modelfile.md  openai.md  rust-migration.md  template.md
envconfig/: config.go
fs/util/bufioutil/: buffer_seeker.go
installer/: setup.iss
integration/: README.md
llama/: llama.go
llm/: server.go  server_test.go
macapp/: README.md
ml/backend/ggml/ggml/src/ggml-cpu/: CMakeLists.txt
runner/: README.md
runner/llamarunner/: runner.go
rust/: Cargo.toml  README.md  build.rs
rust/api/: Cargo.toml
rust/api/examples/: chat.rs  generate.rs  generate_streaming.rs  multimodal.rs  openai_chat.rs  openai_completion.rs  pull_progress.rs
rust/api/src/: client.rs  lib.rs  openai.rs  types.rs
rust/api/tests/: client_test.rs  openai_test.rs  types_test.rs
rust/app_runtime/: Cargo.toml
rust/app_runtime/src/: lib.rs
rust/app_runtime/src/lifecycle/: get_started.rs  logging.rs  mod.rs  paths.rs  server.rs  show_logs.rs  store.rs  tray.rs  updater.rs
rust/auth/: Cargo.toml
rust/auth/src/: lib.rs
rust/cli/: Cargo.toml
rust/cli/src/: lib.rs
rust/cli/tests/: create.rs
rust/convert/: Cargo.toml
rust/convert/src/: lib.rs  reader.rs  tensor.rs  tokenizer.rs
rust/convert/tests/: convert.rs  tensor.rs  tokenizer.rs
rust/discover/: Cargo.toml  build.rs
rust/discover/src/: common.rs  darwin.rs  lib.rs  linux.rs  path.rs  windows.rs
rust/discover/src/linux/: hip.rs
rust/discover/src/windows/: hip.rs
rust/discover/tests/: README.md  gpu.rs  gpu_linux.rs  gpu_linux_paths.rs  gpu_windows.rs
rust/discover/tests/data/: case1.b64  case2.b64  case3.b64
rust/envconfig/: Cargo.toml
rust/envconfig/src/: lib.rs
rust/envconfig/tests/: config.rs
rust/ffi/: common.h  hello.c  hello.h  schema_to_grammar.cpp  schema_to_grammar.h
rust/fs/: Cargo.toml
rust/fs/src/: config.rs  ggml.rs  gguf.rs  lib.rs
rust/fs/src/util/: bufioutil.rs  mod.rs
rust/fs/tests/: gguf.rs  util.rs
rust/ggml-core/: Cargo.toml  build.rs
rust/ggml-core/src/: arena.rs  context.rs  dtype.rs  error.rs  graph.rs  lib.rs  ops.rs  tensor.rs
rust/ggml-core/src/quant/: mod.rs  q4_0.rs
rust/ggml-core/tests/: context.rs  graph.rs  ops.rs  quant.rs  quant_ref.c
rust/ggml-cpu/: Cargo.toml
rust/ggml-cpu/benches/: vec.rs
rust/ggml-cpu/src/: binary.rs  detection.rs  lib.rs  simd_common.rs  unary.rs  vec.rs
rust/ggml-cpu/src/arch/: amx.rs  arm.rs  mod.rs  x86.rs
rust/harmony/: Cargo.toml
rust/harmony/src/: lib.rs
rust/kvcache/src/: lib.rs
rust/kvcache/tests/: causal.rs
rust/llama/: Cargo.toml  build.rs
rust/llama/src/: lib.rs
rust/llama/tests/: schema_to_grammar.rs
rust/llm/: Cargo.toml
rust/llm/src/: lib.rs  process.rs  status.rs
rust/llm/tests/: process.rs  server.rs
rust/logutil/: Cargo.toml
rust/logutil/src/: lib.rs
rust/ml/: Cargo.toml
rust/ml/src/: attention.rs  backend.rs  convolution.rs  embedding.rs  lib.rs  linear.rs  normalization.rs  rope.rs
rust/model/: Cargo.toml
rust/model/src/: bytepair.rs  image_processor.rs  lib.rs  sentencepiece.rs  text_processor.rs  vocabulary.rs
rust/model/tests/: bytepair.rs  model.rs  sentencepiece.rs
rust/ollama_types/: Cargo.toml
rust/ollama_types/src/: errtypes.rs  lib.rs  syncmap.rs
rust/ollama_types/src/model/: capability.rs  mod.rs  name.rs
rust/ollama_types/tests/: capability.rs  errtypes.rs  name.rs  syncmap.rs
rust/parser/: Cargo.toml
rust/parser/src/: lib.rs  modelfile.rs
rust/parser/src/thinking/: mod.rs  parser.rs  template.rs
rust/parser/tests/: create_request.rs  parser.rs  thinking_parser.rs  thinking_template.rs
rust/progress/: Cargo.toml
rust/progress/src/: bar.rs  lib.rs  progress.rs  spinner.rs  tests.rs
rust/readline/: Cargo.toml
rust/readline/src/: lib.rs
rust/runner/: Cargo.toml
rust/runner/src/: lib.rs
rust/runner/src/common/: stop.rs
rust/runner/src/llamarunner/: cache.rs  image.rs
rust/runner/src/ollamarunner/: cache.rs
rust/sample/: Cargo.toml
rust/sample/benches/: samplers.rs
rust/sample/src/: lib.rs
rust/schema/: Cargo.toml
rust/schema/src/: lib.rs
rust/schema/tests/: conversion.rs
rust/server/: Cargo.toml
rust/server/src/: lib.rs
rust/server/tests/: routes.rs
rust/src/: format.rs  lib.rs  main.rs
rust/template/: Cargo.toml
rust/template/src/: lib.rs
rust/tests/: api_tests.rs  basic_tests.rs  concurrency_tests.rs  context_tests.rs  embed_tests.rs  library_models_tests.rs  llm_image_tests.rs  max_queue_tests.rs  model_arch_tests.rs  model_perf_tests.rs  quantization_tests.rs
rust/tests/common/: mod.rs
rust/tools/: Cargo.toml
rust/tools/src/: lib.rs
rust/tools/tests/: template.rs  tools.rs
rust/version/: Cargo.toml  build.rs
rust/version/src/: lib.rs
scripts/: build_darwin.sh  build_linux.sh  build_windows.ps1  env.sh  install.sh  push_docker.sh
src/: main.rs
template/: template.go
