[package]
name = "oxi_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
envconfig = { path = "envconfig" }
readline = { path = "readline" }
kvcache = { path = "kvcache" }
logutil = { path = "logutil" }

[build-dependencies]
cc = "1.0"

[dev-dependencies]
anyhow = "1.0"
base64 = "0.22"
once_cell = "1.19"
serde_json = "1.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "time"] }
api = { path = "api" }
url = "2.5"
