[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.14", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"], optional = true }
humantime = "2"
futures-util = "0.3"
ollama_types = { path = "../ollama_types" }
url = "2.5"
base64 = "0.21"
time = { version = "0.3", features = ["parsing"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tiny_http = "0.12"
serde_json = "1"

[features]
default = ["tokio"]
