[package]
name = "app_runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
atty = "0.2"
auth = { path = "../auth" }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
crossbeam-channel = "0.5"
ctrlc = "3.4"
dirs = "5.0"
envconfig = { path = "../envconfig" }
ico = "0.3"
logutil = { path = "../logutil" }
once_cell = "1.19"
open = "5.0"
parking_lot = "0.12"
rand = "0.8"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "std"] }
url = "2.5"
uuid = { version = "1", features = ["v4"] }
version = { path = "../version" }
walkdir = "2.5"
which = "6.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging"
] }
tray-icon = { version = "0.21", default-features = false }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["signal", "user"] }
