[package]
name = "auth"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = { version = "0.21", default-features = false, features = ["std"] }
rand = { version = "0.8", features = ["std"] }
ed25519-dalek = { version = "2", features = ["std"] }
ssh-key = { version = "0.6", features = ["std", "ed25519", "rand_core"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3"

