[package]
name = "discover"
version = "0.1.0"
edition = "2021"

[features]
default = []
linux-rocm = ["dep:libloading"]

[dependencies]
cfg-if = "1.0"
sysinfo = { version = "0.30", default-features = false }
[target.'cfg(target_os = "linux")'.dependencies]
nvml-wrapper = "0.11"
libloading = { version = "0.8", optional = true }

[dev-dependencies]
base64 = "0.21"
