[package]
name = "discover"
version = "0.1.0"
edition = "2021"

[features]
default = []
linux-rocm = []

[dependencies]
cfg-if = "1.0"
sysinfo = { version = "0.30", default-features = false }
[target.'cfg(target_os = "linux")'.dependencies]
nvml-wrapper = "0.11"
libloading = "0.8"
[target.'cfg(target_os = "linux")'.build-dependencies]
bindgen = "0.69"

[target.'cfg(target_os = "windows")'.dependencies]
nvml-wrapper = "0.11"

[dev-dependencies]
base64 = "0.21"
