[package]
name = "ggml-cpu"
version = "0.1.0"
edition = "2021"

[features]
default = ["avx", "neon"]
avx = []
neon = []
amx = []

[dependencies]
packed_simd_2 = "0.3.8"
half = { version = "2.4", features = ["std"] }
once_cell = "1.19"
thiserror = "1.0"

[dev-dependencies]
approx = "0.5"
rand = "0.8"
criterion = "0.5"

[[bench]]
name = "vec"
harness = false
