[package]
name = "model"
version = "0.1.0"
edition = "2021"

[dependencies]
tokenizers = "0.15.2"
sentencepiece = "0.12"
image = "0.24"
once_cell = "1.19"
thiserror = "1.0"
anyhow = "1.0"
fs = { path = "../fs" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fancy-regex = "0.13"

[dev-dependencies]
tempfile = "3"
