[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
api = { workspace = true }
auth = { workspace = true }
convert = { workspace = true }
tracing = "0.1"
time = { version = "0.3", features = ["formatting"] }
base64 = { version = "0.21", default-features = false, features = ["std"] }
ed25519-dalek = { version = "2", features = ["std"] }
version = { workspace = true }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1"
tower = "0.5"
rand = { version = "0.8", features = ["std"] }
ssh-key = { version = "0.6", features = ["std", "ed25519", "rand_core"] }
tempfile = "3"
