[package]
name = "template"
version = "0.1.0"
edition = "2021"

[dependencies]
api = { workspace = true }
include_dir = "0.7"
go-template = "0.0.3"
gtmpl_value = "0.5"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strsim = "0.11"
thiserror = "1"
time = { version = "0.3", features = ["formatting", "macros", "local-offset", "std"] }
regex = "1"

[dev-dependencies]
serde_json = "1"
